# nethunt-mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
docs/mcp-schema/: README.md  resources-list.json  tools-list.json
docs/mcp-schema/resources/: automation_capabilities_resource.json  readable_folders_resource.json
docs/mcp-schema/tools/: activate_automation.json  add_automation_split.json  add_automation_step.json  auth_test.json  create_automation.json  create_call_log.json  create_record.json  create_record_comment.json  deactivate_automation.json  delete_automation.json  delete_automation_step.json  delete_record.json  get_automation.json  get_automation_step_details.json  get_record.json  list_automation_field_references.json  list_automation_kinds.json  list_automations.json  list_folder_fields.json  list_new_records.json  list_readable_folders.json  list_record_changes.json  list_updated_records.json  list_writable_folders.json  raw_get.json  raw_post.json  rename_automation.json  search_records.json  set_automation_enabled.json  (+3 more)
scripts/: export_mcp_schema.py  run_cursor_mcp.ps1
src/nethunt_mcp/: __init__.py  __main__.py  automation.py  automation_client.py  client.py  config.py  errors.py  mcp_bridge.py  openai_orchestrator.py  server.py  service.py  telegram_bot.py  telegram_main.py
tests/: test_automation.py  test_client.py  test_config.py  test_mcp_bridge.py  test_openai_orchestrator.py  test_runtime_wiring.py  test_server.py  test_service.py  test_telegram_bot.py
